# SAFE-Action-Website

./: .firebaserc  .gitignore  FIREBASE-SETUP.md  about.html  action.html  admin.html  candidate.html  dashboard.html  dev-server.js  directory.html  donate.html  elections.html  feed.html  firebase.json  firestore.rules  google-apps-script.js  index.html  intelligence.html  manifest.json  media.html  nda.html  outreach.html  pledge.html  press.html  privacy.html  quiz.html  sw.js  terms.html  tracker.html  updates.html  vercel.json  volunteer.html
.claude/: launch.json
api/: districts.js
crawler/: .env.example  build_seats.py  enrich_candidates.py  enrich_from_legislators.py  enrich_google_search.py  enrich_openstates.py  fix_district_mismatches.py  merge_enrichment.py  populate_candidates.py  populate_incumbents.py  pyproject.toml  quick_legiscan.py  run_verification_dryrun.py  scrape_ballotpedia.py  validate_emails.py  wait_and_finalize.py
crawler/crawler/: __init__.py  config.py  main.py
crawler/crawler/analysis/: bill_verification.py  pivotal.py  scoring.py
crawler/crawler/output/: schema.py  writer.py
crawler/crawler/sources/: congress.py  govinfo.py  legiscan.py  news.py  openstates.py  state_legislatures.py
crawler/crawler/utils/: cache.py  rate_limiter.py
css/: dashboard.css  fonts.css  styles.css
data/: analysis.json  bills.json  legislators.json  news.json  pivotal.json  seats.json
functions/: .env.example  admin-volunteers.js  create-checkout.js  districts.js  email-service.js  google-workspace.js  index.js  nda-template.js  package-lock.json  (+4 more)
(+45 files in other folders)
